syntax = "proto3";

option csharp_namespace = "AElf.Miner.Rpc";
import "common.proto";
import "kernel.proto";

message RequestBlockInfo {
    Hash ChainId = 1; // parent(own) chain id
    uint64 NextHeight = 2;
}

message ResponseSideChainBlockInfo {
    SideChainBlockInfo BlockInfo = 1;
    bool Success = 2;
}

message ResponseParentChainBlockInfo {
    ParentChainBlockInfo BlockInfo = 1;
    bool Success = 2;
}

service SideChainBlockInfoRpc {
    rpc IndexDuplexStreaming (stream RequestBlockInfo) returns (stream ResponseSideChainBlockInfo) {}
    rpc IndexServerStreaming (RequestBlockInfo) returns (stream ResponseSideChainBlockInfo) {}

}

service ParentChainBlockInfoRpc{
    rpc RecordDuplexStreaming (stream RequestBlockInfo) returns (stream ResponseParentChainBlockInfo) {}
    rpc RecordServerStreaming (RequestBlockInfo) returns (stream ResponseParentChainBlockInfo) {}

}

message MerkleProofMessage {
    repeated Hash BlockMerkleProof = 1;
    repeated Hash TransactionMerkleProof = 2;
}

message VerificationNeededMessage {
    Hash ChainId = 1;
    uint64 BlockHeight = 2; 
}

service MerkleProofInfoRpc {
    rpc MerkleProofInfo (VerificationNeededMessage) returns (MerkleProofMessage) {}
}





